fixed some formatting

--- a/Visualisations.ipynb
+++ b/Visualisations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a9612c4a",
+   "id": "6c5e1675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8d00db6e",
+   "id": "d8ccabf3",
    "metadata": {},
    "outputs": [
     {
@@ -42,9 +42,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "689f00b9",
+   "metadata": {},
+   "source": [
+    "Changing the working directory to easily read in the dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ecfa08a7",
+   "id": "57a160cd",
    "metadata": {},
    "outputs": [
     {
@@ -61,53 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "81d3f24a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Volume in drive C has no label.\n",
-      " Volume Serial Number is 77B6-1F68\n",
-      "\n",
-      " Directory of C:\\Users\\Rudol\\Github\\Nous-Data-Analytics-Virtual-Experience\\Nous-Data-Analytics-Virtual-Experience\\data\n",
-      "\n",
-      "18/05/2023  03:54 PM    <DIR>          .\n",
-      "18/05/2023  03:54 PM    <DIR>          ..\n",
-      "18/05/2023  03:54 PM             2,133 student_teacher_ratio.csv\n",
-      "15/02/2023  10:39 AM            53,189 Table 32a Non-special Schools by Primary Enrolment, 2004-2022.xlsx\n",
-      "15/02/2023  10:39 AM            59,949 Table 33a Non-special Schools by Secondary Enrolment, 2004-2022.xlsx\n",
-      "15/02/2023  10:39 AM           137,760 Table 35b Counts of all Schools, 2010-2022.xlsx\n",
-      "15/02/2023  10:39 AM           231,564 Table 36a Non-special Schools by Enrolment Size Ranges, 2015-2022.xlsx\n",
-      "15/02/2023  10:39 AM         7,812,321 Table 42b Number of Full-time and Part-time Students, 2006-2022.xlsx\n",
-      "15/02/2023  10:39 AM         3,144,453 Table 43a Full-time Equivalent Students, 2006-2022.xlsx\n",
-      "15/02/2023  10:39 AM            80,553 Table 46a Students (FTE) by ASGS Remoteness Indicator, 2022.xlsx\n",
-      "15/02/2023  10:39 AM           179,930 Table 50a In-school Staff (Number), 2006-2022.xlsx\n",
-      "15/02/2023  10:39 AM           807,690 Table 51a In-school Staff (FTE), 2006-2022.xlsx\n",
-      "15/02/2023  10:39 AM           126,633 Table 53a Student (FTE) to Teaching Staff (FTE) Ratios, 2006-2022.xlsx\n",
-      "15/02/2023  10:39 AM           229,719 Table 57a Out-of-school Staff (Number and FTE), 2015-2022.xlsx\n",
-      "15/02/2023  10:39 AM            92,701 Table 62a Capped Apparent Continuation Rates, 2011-2022.xlsx\n",
-      "15/02/2023  10:39 AM           372,112 Table 63a Capped Apparent Retention Rates by Single Year (Grade), 2011-2022.xlsx\n",
-      "15/02/2023  10:39 AM           587,616 Table 64a Capped Apparent Retention Rates, 2011-2022.xlsx\n",
-      "15/02/2023  10:39 AM           514,464 Table 64b Capped Apparent Retention Rates (FTE), 2013-2022.xlsx\n",
-      "15/02/2023  10:39 AM           193,466 Table 66a Capped School Participation Rates for Students Aged 6-19, 2011-2022.xlsx\n",
-      "15/02/2023  10:39 AM         1,249,025 Table 67a Consolidated Student Rates, 2011-2022.xlsx\n",
-      "15/02/2023  10:39 AM           130,855 Table 90a Key Information, by States and Territories, 2021 to 2022.xlsx\n",
-      "              19 File(s)     16,006,133 bytes\n",
-      "               2 Dir(s)  817,611,673,600 bytes free\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
-   "id": "6e24c900",
+   "id": "ebcf58ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c684a083",
+   "id": "6a122a35",
    "metadata": {},
    "outputs": [
     {
@@ -212,419 +175,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "51714d29",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>student_teacher_ratio</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>state_territory</th>\n",
-       "      <th>year</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"17\" valign=\"top\">nsw</th>\n",
-       "      <th>2006</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>12.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018</th>\n",
-       "      <td>12.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <td>13.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020</th>\n",
-       "      <td>13.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021</th>\n",
-       "      <td>13.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022</th>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"17\" valign=\"top\">qld</th>\n",
-       "      <th>2006</th>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>12.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>12.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>12.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <td>12.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>12.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>12.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017</th>\n",
-       "      <td>12.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018</th>\n",
-       "      <td>12.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020</th>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021</th>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022</th>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"17\" valign=\"top\">vic</th>\n",
-       "      <th>2006</th>\n",
-       "      <td>11.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>11.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>11.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>11.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <td>11.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>11.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>11.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>12.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>12.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016</th>\n",
-       "      <td>12.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017</th>\n",
-       "      <td>12.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018</th>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <td>12.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020</th>\n",
-       "      <td>12.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021</th>\n",
-       "      <td>11.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022</th>\n",
-       "      <td>11.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      student_teacher_ratio\n",
-       "state_territory year                       \n",
-       "nsw             2006                   12.4\n",
-       "                2007                   12.5\n",
-       "                2008                   12.4\n",
-       "                2009                   12.4\n",
-       "                2010                   12.5\n",
-       "                2011                   12.5\n",
-       "                2012                   12.4\n",
-       "                2013                   12.3\n",
-       "                2014                   12.4\n",
-       "                2015                   12.5\n",
-       "                2016                   12.5\n",
-       "                2017                   12.4\n",
-       "                2018                   12.3\n",
-       "                2019                   13.9\n",
-       "                2020                   13.4\n",
-       "                2021                   13.2\n",
-       "                2022                   13.0\n",
-       "qld             2006                   13.0\n",
-       "                2007                   12.9\n",
-       "                2008                   12.8\n",
-       "                2009                   12.7\n",
-       "                2010                   12.6\n",
-       "                2011                   12.5\n",
-       "                2012                   12.5\n",
-       "                2013                   12.6\n",
-       "                2014                   12.5\n",
-       "                2015                   12.7\n",
-       "                2016                   12.5\n",
-       "                2017                   12.4\n",
-       "                2018                   12.2\n",
-       "                2019                   12.1\n",
-       "                2020                   12.1\n",
-       "                2021                   12.1\n",
-       "                2022                   12.1\n",
-       "vic             2006                   11.9\n",
-       "                2007                   11.8\n",
-       "                2008                   11.8\n",
-       "                2009                   11.9\n",
-       "                2010                   11.8\n",
-       "                2011                   11.7\n",
-       "                2012                   11.9\n",
-       "                2013                   12.2\n",
-       "                2014                   12.5\n",
-       "                2015                   12.6\n",
-       "                2016                   12.5\n",
-       "                2017                   12.3\n",
-       "                2018                   12.1\n",
-       "                2019                   12.3\n",
-       "                2020                   12.2\n",
-       "                2021                   11.8\n",
-       "                2022                   11.6"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pivot = pd.pivot_table(df, values = 'student_teacher_ratio', index = ['state_territory', 'year'])\n",
-    "df_pivot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "ab46abe6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>state_territory</th>\n",
-       "      <th>affiliation</th>\n",
-       "      <th>school_level</th>\n",
-       "      <th>student_teacher_ratio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>nsw</td>\n",
-       "      <td>government</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>vic</td>\n",
-       "      <td>government</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>11.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>qld</td>\n",
-       "      <td>government</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>nsw</td>\n",
-       "      <td>government</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>13.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>vic</td>\n",
-       "      <td>government</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>11.8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year state_territory affiliation school_level  student_teacher_ratio\n",
-       "0  2022             nsw  government    secondary                   13.0\n",
-       "1  2022             vic  government    secondary                   11.6\n",
-       "2  2022             qld  government    secondary                   12.1\n",
-       "3  2021             nsw  government    secondary                   13.2\n",
-       "4  2021             vic  government    secondary                   11.8"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "ef03bfda",
+   "id": "c2d52eb1",
    "metadata": {},
    "source": [
     "# Seaborn plotting\n"
@@ -633,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "88944331",
+   "id": "c1648e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "94a42b37",
+   "id": "3f0b989d",
    "metadata": {},
    "outputs": [
     {
@@ -673,12 +225,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae32ca51",
+   "id": "1ac941f0",
    "metadata": {},
    "source": [
     "All three states show an increase from the years 2012 to 2016 followed by a decrease from 2016 to 2018. NSW has a sharp increase 2018 onwards. The other states have further decreases from 2018 onwards. \n",
     "\n",
-    "What could have happened in 2018 that caused "
+    "What could have happened in 2018 that caused this sharp increase in NSW? \n",
+    "\n",
+    "Could COVID have affected the ratio from 2019 onwards? "
    ]
   }
  ],
